//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Venues {
  id Int [pk, increment]
  name String [not null]
  address String [not null]
  city String [not null]
  state String [not null]
  lat Float
  lng Float
  placeId String
  events Events [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Events {
  id Int [pk, increment]
  name String [not null]
  date DateTime [not null]
  faceValue Int
  festivalName String
  wasOpener Boolean
  venue Venues [not null]
  venueId Int [not null]
  genre Genres [not null]
  genreId Int [not null]
  subGenre Genres
  subGenreId Int
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Genres {
  id Int [pk, increment]
  name String [not null]
  parent Genres
  parentId Int
  subGenres Genres [not null]
  eventsAsGenre Events [not null]
  eventsAsSub Events [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Ref: Events.venueId > Venues.id

Ref: Events.genreId > Genres.id

Ref: Events.subGenreId > Genres.id

Ref: Genres.parentId - Genres.id